<resources>
    <string name="app_name">Assingment</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="sing_up">Sing up</string>
    <string name="write_email_here">Write email here</string>
    <string name="password">Password</string>
    <string name="new_user_login">new user login</string>
    <string name="expense_manager">Expense manager</string>
    <string name="dashbord">Dashbord</string>
</resources>